--- a/bigbluebutton-html5/imports/ui/components/chat/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/styles.scss
@@ -19,6 +19,7 @@
 
 .chat {
   background-color: var(--color-white);
+  // background-color: var(--color-white);
   padding:
     var(--md-padding-x)
     var(--md-padding-y)
