--- a/bigbluebutton-html5/imports/ui/components/chat/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/styles.scss
@@ -18,8 +18,7 @@
 }
 
 .chat {
-  background-color: var(--color-white);
-  // background-color: var(--color-white);
+  background-color: var(--color-chat);
   padding:
     var(--md-padding-x)
     var(--md-padding-y)
