--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
@@ -27,7 +27,8 @@
 }
 
 .systemMessage {
-  background: var(--systemMessage-background-color);
+  // background: var(--systemMessage-background-color);
+  background: var(--systemMessage-background-color-darkmode);
   border: 1px solid var(--systemMessage-border-color);
   border-radius: var(--border-radius);
   font-weight: var(--btn-font-weight);
