--- a/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
+++ b/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
@@ -34,4 +34,6 @@
   --color-chat: var(--color-white);
   
   --color-darkmode-background: #2b2b2b;
+
+  --systemMessage-background-color-darkmode: var(--color-white);
 }
