--- a/bigbluebutton-html5/imports/ui/components/user-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/styles.scss
@@ -83,7 +83,8 @@
 .userList {
   @extend %flex-column;
   justify-content: flex-start;
-  background-color: var(--user-list-bg);
+  background-color: var(--user-list-darktheme);
+  // background-color: var(--user-list-bg);
   color: var(--user-list-text);
   height: 100%;
 }
