--- a/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
+++ b/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
@@ -39,6 +39,6 @@
   --color-darkmode-background: #2b2b2b;
   --color-darkmode-chat: #313335;
   --systemMessage-darkmode-background-color: var(--color-white);
-  --systemMessage-darkmode-color: var(--color-black)
-  --user-list-darktheme: var(--color-off-white)
+  --systemMessage-darkmode-color: var(--color-black);
+  --user-list-darktheme: var(--color-off-white);
 }
