--- a/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/chat-icon/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/chat-icon/styles.scss
@@ -3,7 +3,7 @@
 
 .chatThumbnail {
   @extend %flex-column;
-  color: var(--color-gray-light);
+  color: var(--color-chat-thumbnail);
   justify-content: center;
   font-size: 175%;
 }
