--- a/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/user-participants/user-list-item/user-name/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/user-participants/user-list-item/user-name/styles.scss
@@ -20,7 +20,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   font-weight: 400;
-  color: var(--color-gray-dark);
+  color: var(--color-theme-text);
+  // color: var(--color-gray-dark);
   display: flex;
   flex-direction: row;
 
