--- a/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-form/styles.scss
@@ -55,7 +55,7 @@
   background: var(--color-input);
   background-clip: padding-box;
   margin: 0;
-  color: var(--color-input-text);
+  color: var(--color-theme-text);
   -webkit-appearance: none;
   padding: calc(var(--sm-padding-y) * 2.5) calc(var(--sm-padding-x) * 1.25);
   resize: none;
