--- a/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/styles.scss
@@ -54,7 +54,7 @@
   @extend %text-elipsis;
   font-weight: 400;
   font-size: var(--font-size-small);
-  color: var(--color-gray-dark);
+  color: var(--color-chat-name-main);
   flex-grow: 1;
   line-height: 2;
   text-align: left;
@@ -68,6 +68,6 @@
 }
 
 .active {
-  background-color: var(--list-item-bg-hover);
+  background-color: var(--color-chat-box);
   box-shadow: inset 0 0 0 var(--border-size) var(--item-focus-border), inset 1px 0 0 1px var(--item-focus-border);
 }
