--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/styles.scss
@@ -25,7 +25,8 @@
 }
 
 .messageList {
-  @include scrollbox-vertical();
+  // @include scrollbox-vertical();
+  background: var(--color-background-messageList);
   flex-flow: column;
   flex-grow: 1;
   flex-shrink: 1;
