--- a/bigbluebutton-html5/imports/ui/components/app/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/app/styles.scss
@@ -129,7 +129,8 @@
 }
 
 .userlistPad {
-  background-color: var(--color-off-white);
+  // background-color: var(--color-off-white);
+  background-color: var(--color-userlistPad);
   width: var(--userlist-handle-width);
 }
 
