--- a/bigbluebutton-html5/imports/ui/components/captions/pad/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/captions/pad/styles.scss
@@ -60,8 +60,9 @@
 }
 
 .hideBtn {
+  color: var(--color-btn-hide-text);
   position: relative;
-  background-color: var(--color-white);
+  background-color: var(--color-hide-chat);
   display: block;
   margin: var(--border-size-large);
   margin-bottom: var(--border-size);
@@ -74,7 +75,7 @@
   }
 
   > i {
-    color: var(--color-gray-dark);
+    color: var(--color-btn-hide-chat);
     font-size: smaller;
 
     [dir="rtl"] & {
