--- a/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
@@ -16,7 +16,8 @@
 
 
   i {
-    color: var(--color-gray-dark) !important;
+    // color: var(--color-gray-dark) !important;
+    color: var(--color-icon) !important;
     top: var(--icon-offset);
     left: var(--icon-offset);
   }
@@ -24,7 +25,8 @@
   &:hover,
   &:focus {
     > span:first-child {
-      background-color: transparent !important;
+      // background-color: transparent !important;
+      background-color: var(--background-icon) !important;
     }
   }
 }
