--- a/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
@@ -30,3 +30,11 @@
     }
   }
 }
+
+.icon{
+  color: var(--color-icon) !important;
+}
+
+.button:hover{
+  background-color: var(--background-icon) !important;
+}
