--- a/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/message-list/message-list-item/styles.scss
@@ -140,7 +140,8 @@
   flex: 1;
   margin-top: calc(var(--line-height-computed) / 3);
   margin-bottom: 0;
-  color: var(--color-text);
+  color: var(--color-theme-text);
+  // color: var(--color-text);
   word-wrap: break-word;
 }
 
