--- a/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
+++ b/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
@@ -63,6 +63,6 @@
   --color-background-darkmode-scrollablelist: var(--color-darkmode-background);
   --color-darkmode-userlistPad: #444;
   --color-background-darkmode-messageList: var(--color-darkmode-chat);
-  --background-darktheme-icon: #00417a;
-  --color-darktheme-icon: var(--color-white);
+  --background-darkmode-icon: #00417a;
+  --color-darkmode-icon: var(--color-white);
 }
