--- a/bigbluebutton-html5/imports/ui/components/poll/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/poll/styles.scss
@@ -22,7 +22,8 @@
 
 .hideBtn {
     position: relative;
-    background-color: var(--color-white);
+    color: var(--color-btn-hide-text);
+  background-color: var(--color-hide-chat);
     display: block;
     margin: var(--border-size-large);
     margin-bottom: var(--border-size);
@@ -35,7 +36,7 @@
     }
 
     > i {
-        color: var(--color-gray-dark);
+        color: var(--color-btn-hide-chat);
         font-size: smaller;
 
         [dir="rtl"] & {
