--- a/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
@@ -31,3 +31,14 @@
   }
 }
 
+.optionsButton{
+    i {
+      color: var(--color-icon) !important;
+      background-color: transparent !important;
+    }
+
+    &:hover,
+    &:focus {
+      background-color: var(--background-icon) !important;
+    }
+}
