--- a/bigbluebutton-html5/imports/ui/components/app/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/app/styles.scss
@@ -166,7 +166,7 @@
 }
 
 .poll {
-  background-color: var(--color-white);
+  background-color: var(--color-chat);
   min-width: var(--poll-pane-min-width);
   padding: 1rem;
 }
