--- a/bigbluebutton-html5/imports/ui/components/poll/live-result/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/poll/live-result/styles.scss
@@ -59,7 +59,7 @@
   padding: var(--sm-padding-y);
   margin-top: var(--poll-sm-margin);
   margin-bottom: var(--poll-sm-margin);
-  color: var(--color-text);
+  color: var(--color-btn-hide-text);
 }
 
 .left,
