--- a/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/user-list-content/styles.scss
@@ -60,7 +60,8 @@
   text-decoration: none;
   width: 100%;
   color: var(--color-gray-dark);
-  background-color: var(--color-off-white);
+  background-color: var(--color-background-listItem);
+  // background-color: var(--color-off-white);
 
   [dir="rtl"]  & {
     padding-right: var(--lg-padding-y);
