--- a/bigbluebutton-html5/imports/ui/components/poll/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/poll/styles.scss
@@ -94,7 +94,7 @@
 .instructions {
     margin-top: var(--lg-padding-x);
     margin-bottom: var(--lg-padding-x);
-    color: var(--color-text);
+    color: var(--color-btn-hide-text);
 }
 
 .grid {
