--- a/bigbluebutton-html5/imports/ui/components/user-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/styles.scss
@@ -72,7 +72,8 @@
   &:focus {
     @include highContrastOutline();
     outline-style: solid;
-    background-color: var(--list-item-bg-hover);
+    // background-color: var(--list-item-bg-hover);
+    background-color: var(--list-item-hover);
     box-shadow: inset 0 0 0 var(--border-size) var(--item-focus-border), inset 1px 0 0 1px var(--item-focus-border);
   }
 }
