--- a/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
+++ b/bigbluebutton-html5/imports/ui/stylesheets/variables/palette.scss
@@ -50,6 +50,7 @@
   --color-icon: var(--color-gray-dark);
   --color-btn-hide-chat:var(--color-dark-grey);
   --color-btn-hide-text:var(--color-black);
+  --color-background-listItem: var(--color-off-white);
   
   --color-darkmode-background: #2b2b2b;
   --color-darkmode-chat: #313335;
@@ -65,4 +66,5 @@
   --color-background-darkmode-messageList: var(--color-darkmode-chat);
   --background-darkmode-icon: #00417a;
   --color-darkmode-icon: var(--color-white);
+  --color-background-listItem: var(--user-list-darktheme);
 }
