--- a/bigbluebutton-html5/imports/ui/components/poll/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/poll/styles.scss
@@ -212,6 +212,6 @@
 }
 
 .noSlidePanelContainer {
-    color: var(--color-gray-drak);
+    color: var(--color-btn-hide-chat);
     text-align: center;
 }
