--- a/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/chat-list-item/styles.scss
@@ -10,7 +10,8 @@
   flex-grow: 1;
   line-height: 2;
   color: var(--color-gray-dark);
-  background-color: var(--color-off-white);
+  background-color: var(--color-background-listItem);
+  // background-color: var(--color-off-white);
   padding-top: var(--lg-padding-y);
   padding-bottom: var(--lg-padding-y);
   padding-left: var(--lg-padding-y);
