--- a/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/chat/chat-dropdown/styles.scss
@@ -38,6 +38,6 @@
     }
     &:hover,
     &:focus {
-      background-color: var(--background-icon) !important;
+      background-color: transparent !important;
     }
 }
